@@ -1,5 +1,5 @@
 
-$Id: History,v 1.24 2001-11-08 15:46:31 gcosmo Exp $
+$Id: History,v 1.25 2002-01-10 15:34:27 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+ Jan 10  2001  Gabriele Cosmo       geom-solid-bool-V04-00-00
+  - Moved all verbosity mode warnings to G4BOOLDEBUG and commented
+    exceptions.
+  - Activated G4BOOLDEBUG mechanism in GNUmakefile.
 
  Nov 08  2001  Gabriele Cosmo       geom-solid-bool-V03-02-02
   - Fix for verbosity in G4ReflectionFactory.cc. Reduced of one level.
